--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
         "wdio-chromedriver-service": "^7.3.1"
     },
     "scripts": {
-        "test": "yarn wdio run wdio.conf.js --spec ./test/specs/**/*.js"
+        "test": "yarn wdio run wdio.conf.js --spec ./test/specs/ford.e2e.js"
     },
     "dependencies": {
-        "chai": "^4.3.6",
+        "@wdio/selenium-standalone-service": "^7.18.0",
         "wdio-html-nice-reporter": "^7.9.1"
     }
 }
